fix layout issue - how to use pulse

--- a/src/routes/help/styles.scss
+++ b/src/routes/help/styles.scss
@@ -7,8 +7,8 @@
 .topbar {
   width: 100%;
   height: 70px;
-  position: fixed;
-  top: 0px;
+  // position: fixed;
+  // top: 0px;
   border-bottom: 1px solid #eee;
 
   .section {
@@ -26,7 +26,7 @@
   display: flex;
   flex-flow: row wrap;
   width: 100%;
-  margin-top: 70px;
+  // margin-top: 70px;
 }
 
 @media only screen and (max-width: 880px) {
